Fix horizontal scroll

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -4,7 +4,7 @@
   @include box-shadow(inset 0px 5px 10px -6px rgba(0,0,0,.75));
 
   background-color: $gray-lighter;
-  padding: 50px 100px;
+  padding: 50px 0;
   color: $gray-darker;
 
   .column-title { }
